refactor: 完整的專案結構整理和清潔化
主要改動：
✨ 創建清晰的目錄結構：
   - tests/ - 統一的測試檔案
   - experimental/ - 實驗性工具
   - docs/ - 完整的文檔
   - logs/ - 爬蟲日誌

🗑️ 刪除冗餘檔案：
   - 刪除所有 .bak 備份檔案 (~129 MB)
   - 刪除所有 .log 日誌檔案 (~8 MB)
   - 刪除失敗樣本和臨時檔案
   - 刪除舊的Web UI檔案 (app.js, index.html, style.css)

📂 整理檔案位置：
   - 測試檔案移動到 tests/
   - 實驗工具移動到 experimental/
   - 文檔移動到 docs/
   - 監控工具移動到 scripts/

✍️ 新增文檔：
   - docs/ARCHITECTURE.md - 詳細的架構說明
   - docs/README.md - 文檔索引
   - tests/README.md - 測試說明
   - experimental/README.md - 實驗工具說明
   - scripts/unified_monitor.py - 統一的進度監控工具

📝 更新配置：
   - 優化 .gitignore，規範化日誌和臨時檔案
   - 添加 .gitkeep 文件保持空目錄

結果：
- 專案根目錄只保留核心檔案 (README.md, LICENSE, requirements.txt, nycu_crawler.py)
- 目錄結構清晰易懂，遵循最佳實踐
- 所有有價值的程式碼均被保留
- 文件相依性無誤，功能完整

清理效果：
- Python 檔案數: 26 → 9（生產和主要模組）
- 總檔案數: 68+ → ~40（減少 40%+）
- 垃圾檔案: 清理 137 MB
- 專案整潔度: 從 🔴 非常高 改善到 🟢 很低

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,29 @@ Thumbs.db
 # Checkpoint files (from crawler)
 *_checkpoint.json
 
+# Crawled data files (too large for git)
+course_data/basic/*.json
+course_data/with_outline/*.json
+!course_data/basic/.gitkeep
+!course_data/with_outline/.gitkeep
+
+# Logs directory
+logs/
+!logs/.gitkeep
+
+# Documentation (auto-generated)
+docs/*.log
+docs/*.tmp
+
+# Legacy/backup data
+legacy_data/
+backup/
+old/
+
+# Crawler logs
+outline_*.log
+crawl_*.log
+
 # Prerequisites
 *.d
 
